<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello andorid!</string>
    <string name="app_name">学汉字</string>
    <string name="button">Button</string>
    <string name="opencv">图像处理</string>

    <!-- Noun, menu item used to demo Gesture -->
    <string name="gesture">手势</string>
    <string name="openGL">OpenGL</string>
    <string name="audio">语音处理</string>
    <string name="audioRecognizer">语音识别</string>
    <string name="audioTTS">语音合成</string>
    <string name="audioList">语音列表</string>
    <!-- Noun, menu item used to demo Paint -->
    <string name="paint">Paint</string>
    <string name="gestures_loading">Loading gestures</string>
    <!-- Message displayed when the user has no gestures -->
    <string name="gestures_empty">No gestures</string>
    <string name="pinyin_empty">No pinyin</string>

    <!-- Noun, menu item used to rename a gesture -->
    <string name="gestures_rename">Rename</string>
    <!-- Title of Rename gesture dialog box -->
    <string name="gestures_rename_title">Rename gesture</string>
    <!-- Label of gesture name field in Rename gesture dialog box -->
    <string name="gestures_rename_label">Gesture name</string>

    <!-- Message displayed when a gesture is successfully deleted -->
    <string name="gestures_rename_success">Gesture renamed</string>
    <!-- Message displayed when a gesture isnot successfully deleted -->
    <string name="gestures_rename_failed">Gesture rename failed</string>

    <!-- Noun, menu item used to remove a gesture -->
    <string name="gestures_delete">Delete</string>
    <!-- Message displayed when a gesture is successfully deleted -->
    <string name="gestures_delete_success">Gesture deleted</string>

    <!-- Message, displayed when the sdcard cannot be found, 1st parameter is the name of the file that stores the gestures.  CHAR LIMIT=80 -->
    <string name="gestures_error_loading">Could not load %s. Make sure you have storage available.</string>
    <string name="storage_not_available">Could not load %s. Make sure you have storage available.</string>

    <!-- Label, prompt asking the user to enter the name of the gesture -->
    <string name="prompt_gesture_name">Name</string>
    <!-- Error message, informs the user he needs to enter a name before saving a gesture -->
    <string name="error_missing_name">You must enter a name</string>
    <!-- success message, tells the user where the gesture was saved -->
    <string name="save_success">Gesture saved in %s</string>

    <!-- Buttons in Rename gesture dialog box -->
    <string name="rename_action">OK</string>
    <!-- Buttons in Rename gesture dialog box -->
    <string name="cancel_action">Cancel</string>

    <!-- Label, button used to add a gesture -->
    <string name="button_add">Add</string>
    <!-- Label, button used to reload all gestures -->
    <string name="button_reload">Reload</string>
    <!-- Label, button used to upload all gestures to dropbox -->
    <string name="button_upload">Upload</string>
    <!-- Label, button used to upload all gestures to dropbox -->
    <string name="button_download">Download</string>
    <!-- Label, button used to cancel the operation of adding a gesture -->
    <string name="button_discard">Discard</string>
    <!-- Label, button used to save a gesture newly created -->
    <string name="button_done">Done</string>
    <!-- Label, button used to earse a gesture in screen -->
    <string name="button_earse">Earse</string>
    <string name="audio_play_failed">Audio play failed</string>
    <string name="makedir_failed">Make Directory failed</string>

    <!-- Progress -->
    <string name="select_dialog">Header title</string>
    <string name="alert_dialog_hide">Hide</string>
    <string name="alert_dialog_cancel">Cancel</string>

    <string name="reading">I write, you read</string>
    <string name="writing">I read, you write</string>

    <!-- opencv 图像处理 -->
    <string name="tutorial1">教程1</string>
    <string name="tutorial2">教程2</string>
    <string name="tutorial3">教程3</string>

    <!-- 百度语音 -->
    <string name="please_speak">请说话</string>
    <string name="speaking">说话中</string>
    <string name="cancel">取消</string>
    <string name="start">开始</string>
    <string name="setting">设置</string>
    <string name="infile_default"></string>
    <string-array name="infile_list">
        <item>@string/infile_default</item>
        <item>res:///com/baidu/android/voicedemo/8k_test.pcm, 8k采样的测试音频</item>
        <item>res:///com/baidu/android/voicedemo/16k_test.pcm, 16k采样的测试音频</item>
    </string-array>

    <string name="sample_default"></string>
    <string-array name="sample_list">
        <item>@string/sample_default</item>
        <item>8000, 适用于2G或3G网络</item>
        <item>16000, 适用于4G或WIFI网络</item>
    </string-array>

    <string name="language_default"></string>
    <string-array name="language">
        <item>@string/language_default</item>
        <item>cmn-Hans-CN, 普通话(中国)</item>
        <item>sichuan-Hans-CN, 四川(中国)</item>
        <item>yue-Hans-CN, 粤语(中国)</item>
        <item>en-GB, 英语(美国)</item>
    </string-array>

    <string name="nlu_default"></string>
    <string-array name="nlu_list">
        <item>@string/nlu_default</item>
        <item>disable, 禁用语义解析</item>
        <item>enable, 开启语义解析</item>
    </string-array>

    <string name="vad_default"></string>
    <string-array name="vad_list">
        <item>@string/vad_default</item>
        <item>search, 适用输入搜索关键字(默认值)</item>
        <item>input, 适用于输入短信、微博等长句输入</item>
    </string-array>
    <string name="prop_default"></string>
    <string-array name="prop_tpye">
        <item>@string/prop_default</item>
        <item>20000, 输入</item>
        <item>10005, 热词</item>
        <item>10060, 地图</item>
        <item>10001, 音乐</item>
        <item>10002, 视频</item>
        <item>10003, 应用</item>
        <item>10004, 网页</item>
        <item>10007, 健康</item>
        <item>10006, 购物</item>
        <item>10008, 打电话</item>
        <item>10008, 超级电话</item>
        <item>10052, 医疗</item>
        <item>10053, 汽车</item>
        <item>10054, 娱乐餐饮</item>
        <item>10055, 财经</item>
        <item>10056, 游戏</item>
        <item>10057, 菜谱</item>
        <item>10058, 助手</item>
        <item>100014, 联系人</item>
        <item>100016, 手机设置</item>
        <item>100018, 电视指令</item>
        <item>100019, 播放器指令</item>
        <item>100020, 收音机指令</item>
        <item>100021, 命令词</item>
    </string-array>

    <!-- 登录 -->
    <string name="login_activity_title">登录</string>
    <string name="login_activity_account">帐号</string>
    <string name="login_activity_pwd">密码</string>
    <string name="login_activity_button_login">登录</string>
    <string name="login_activity_button_register">注册</string>
    <string name="login_activity_edittext_username">请输入您的手机号</string>
    <string name="login_activity_edittext_pwd">请输入您的登录密码</string>
    <string name="login_activity_text_forget_pwd">忘记密码?</string>
    <string name="login_activity_toast_enter_username">请先输入您的手机号</string>
    <string name="login_activity_toast_enter_password">请先输入您的登录密码</string>
    <string name="login_activity_toast_error_password">请输入8~16位字母和数字的组合</string>
    <string name="login_activity_toast_error_username">请输入正确的手机号</string>
    <string name="login_activity_toast_success">登录成功</string>
    <string name="login_activity_toast_failed">登录失败</string>
    <string name="login_activity_toast_failed_freeze">该用户已被冻结,请联系管理员！</string>

</resources>