<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/audio" />

    <Button
        android:id="@+id/audioListBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/audioList"/>
    <Button
        android:id="@+id/recognizerBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/audioRecognizer"/>
    
    <Button
        android:id="@+id/ttsBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/audioTTS"/>

</LinearLayout>